// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sourcemap > should generate sourcemap if.css, dev = false 1`] = `
{
  "code": "body {
}


body {
content: "!DEV";}


body {
content: "!DEV";}


body {
}
",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;AAIP,CAAC,CAAC;AACF,CAAC;AACD,CAAC;AACD,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;AACP,gBAKA,CAAC,CAAC;AACF,CAAC;AACD,CAAC;AACD,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;AACP,gBAOA,CAAC,CAAC;AACF,CAAC;AACD,CAAC;AACD,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;AAQP,CAAC,CAAC;",
    "names": [],
    "sources": [
      "",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`sourcemap > should generate sourcemap if.css, dev = true 1`] = `
{
  "code": "body {
content: "DEV";}


body {
content: "!DEV else";}


body {
content: "TEST";}


body {
content: "else";}
",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;AACP,eAGA,CAAC,CAAC;AACF,CAAC;AACD,CAAC;AACD,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;AACP,qBAKA,CAAC,CAAC;AACF,CAAC;AACD,CAAC;AACD,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;AACP,gBAOA,CAAC,CAAC;AACF,CAAC;AACD,CAAC;AACD,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;AACP,gBAOA,CAAC,CAAC;",
    "names": [],
    "sources": [
      "",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`sourcemap > should generate sourcemap if.html, dev = false 1`] = `
{
  "code": "
<div>!DEV</div>
<div>!DEV</div>
",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAGA,CAAC;AACD,eAKA,CAAC;AACD,eAOA,CAAC;",
    "names": [],
    "sources": [
      "",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`sourcemap > should generate sourcemap if.html, dev = true 1`] = `
{
  "code": "<div>DEV</div>
<div>!DEV else</div>
<div>TEST</div>
<div>
<div>else</div>
</div>",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA,cAGA,CAAC;AACD,oBAKA,CAAC;AACD,eAOA,CAAC;AACD;AAAA;AAAA",
    "names": [],
    "sources": [
      "",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`sourcemap > should generate sourcemap if.js, dev = false 1`] = `
{
  "code": "
console.log('!DEV')
console.log('!DEV')
",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAGA,CAAC;AACD,mBAKA,CAAC;AACD,mBAOA,CAAC;",
    "names": [],
    "sources": [
      "",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`sourcemap > should generate sourcemap if.js, dev = true 1`] = `
{
  "code": "console.log('DEV')
console.log('!DEV else')
console.log('TEST')
console.log('else')",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA,kBAGA,CAAC;AACD,wBAKA,CAAC;AACD,mBAOA,CAAC;AACD",
    "names": [],
    "sources": [
      "",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`sourcemap > should generate sourcemap if.jsx, dev = false 1`] = `
{
  "code": "const Component = () => <div>
</div>;
",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;AAU9B,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;",
    "names": [],
    "sources": [
      "",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`sourcemap > should generate sourcemap if.jsx, dev = true 1`] = `
{
  "code": "const Component = () => <div>
DEVDEV=true</div>;
",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;AAC9B,GAGA,QAMA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;",
    "names": [],
    "sources": [
      "",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;
